# safetalk

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTES.md  QUICKSTART.md  README.md  pyproject.toml  run_api.py  start.sh
configs/: training_config.yaml
deploy/hf-space/: Dockerfile  README.md  requirements.txt
deploy/hf-space/src/models/: beto_classifier.py  predictor.py
deploy/hf-space/src/telegram/: bot.py
models/: lightgbm_best_params.json  lightgbm_metricas.json
models/beto/: README.md  metricas_beto.json
models/beto/modelo/: config.json
notebooks/: 01_analisis_dataset_zenodo.ipynb  01_exploracion_dataset_safetalk_completo.ipynb  02_limpieza_clase_0.ipynb  03_generar_sinteticos_chatgpt.ipynb  03_limpieza_textos.ipynb  04_generar_sinteticos_chatgpt.ipynb  05_combinar_dataset_final.ipynb  06_dividir_train_val_test.ipynb  07_baseline_tfidf_svm.ipynb  08_baseline_lightgbm_optuna.ipynb  09_beto_finetuning.ipynb  10_test_beto_local.ipynb  11.1_beto_v2_preprocesado.ipynb  11_beto_v2_preprocesado.ipynb  12_Beto_V2_final.ipynb
scripts/: convert_dataset.py  download_huggingface_dataset.py  preprocess_and_split_v2.py  probar_normalizacion.py  sync_hf_space.sh  train_baseline.py  train_beto.py  verify_preprocessing.py
src/: database.py
src/api/: main.py  schemas.py
src/data/: __init__.py  preprocessing.py
src/discord_bot/: bot.py
src/models/: beto_classifier.py  predictor.py
src/safetalk/: __init__.py  detector.py
src/safetalk/data/: __init__.py  dataset.py  preprocessing.py
src/safetalk/models/: __init__.py  baseline.py  beto_model.py
src/telegram/: bot.py
src/telegram_bot/: bot.py
tests/: test_detector.py  test_preprocessing.py
